<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Plant Places</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="lblLatitude">Latitude</string>
    <string name="lblZero">0</string>
    <string name="lblLongitude">Longitude</string>
    <string name="lblPlantName">Plant Name</string>
    <string name="lblBlank"></string>
    <string name="lblSearch">Search</string>
    <string name="button_clicked">Button Clicked</string>
    <string name="lblGPSAPlant">GPS A Plant</string>
    <string name="lblPlantSearch">Plant Search</string>
    <string name="lblTakePhoto">Take Photo</string>
    <string name="lblSave">Save</string>
    <string name="lblImageGallery">Image Gallery</string>
    <string name="btnCamera">Camera</string>
    <string name="unable_to_open_image">Unable to open image</string>

</resources>
